# scraper-ayi

./: README.md  build_semantic_examples.py  extract_real_examples.py  pyproject.toml  response.html  semantic_examples.json  train_optimal_weights.py  utils.py
adaptive_scraper/: __init__.py  adaptive_extractor.py  container_discovery.py  element_scorer.py  ml_trainer.py  semantic_validator.py
core/: settings.py
output/: data_result_20251018.22.24.11.json  data_result_20251018.22.32.37.json  delete_result.json
portal/: items.py  middlewares.py  pipelines.py  settings.py
portal/spiders/: constants.py  data_extractor.py  news_spider.py  portal_spider.py
trained_models/: optimal_weights.json  optimal_weights.pkl
