[project]
name = "news-portal"
version = "0.1.0"
description = "Scraping of news articles from various sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.0",
    "xgboost>=3.1.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.6.0",
]
